#142: Ollama Integration (#154)
* #142: Add OllamaChatCompletion configs

* #142: update tests and docs

* #142: update readme

* #142: update tests

* #142: update tests

* #142: update tests

* #142: update tests

* #142: update tests

---------
