# docs/swagger.yaml
@@ -238,6 +238,58 @@ definitions:
       top_p:
         type: number
     type: object
+  ollama.Config:
+    properties:
+      baseUrl:
+        type: string
+      chatEndpoint:
+        type: string
+      defaultParams:
+        $ref: '#/definitions/ollama.Params'
+      model:
+        type: string
+    required:
+    - baseUrl
+    - chatEndpoint
+    - model
+    type: object
+  ollama.Params:
+    properties:
+      microstat:
+        type: integer
+      microstat_eta:
+        type: number
+      microstat_tau:
+        type: number
+      num_ctx:
+        type: integer
+      num_gpu:
+        type: integer
+      num_gqa:
+        type: integer
+      num_predict:
+        type: integer
+      num_thread:
+        type: integer
+      repeat_last_n:
+        type: integer
+      seed:
+        type: integer
+      stop:
+        items:
+          type: string
+        type: array
+      stream:
+        type: boolean
+      temperature:
+        type: number
+      tfs_z:
+        type: number
+      top_k:
+        type: integer
+      top_p:
+        type: number
+    type: object
   openai.Config:
     properties:
       baseUrl:
@@ -311,6 +363,8 @@ definitions:
         $ref: '#/definitions/latency.Config'
       octoml:
         $ref: '#/definitions/octoml.Config'
+      ollama:
+        $ref: '#/definitions/ollama.Config'
       openai:
         allOf:
         - $ref: '#/definitions/openai.Config'
